added rare-earth magnets